Fixed settings menu and message overflow y

--- a/app/assets/stylesheets/channel_messages/channel_messages.scss
+++ b/app/assets/stylesheets/channel_messages/channel_messages.scss
@@ -1,5 +1,6 @@
 #channel-messages {
   overflow-x: hidden;
+  overflow-y: hidden;
   width: 100%;
 
   .channel-messages-header {
